# vizlab-data-transfer

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-package.yaml  run-tests.yaml
examples/: receive-data.py  receive_data.py  send-data.py  send_data.py
src/vizlab-data-transfer/: vizlab.py
src/vizlab_data_transfer/: vizlab.py
tests/: test_data_receive.py  test_data_send.py
