[project]
name = "vizlab-data-transfer"
description = "A small package for sending and receiving data from the CTAC VizLab."
authors = [{name = "Chris Couto", email = "ccouto@carnegiescience.edu"}]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.7"
dependencies = ["matplotlib", "Pillow", "numpy", "pandas", "astropy"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/carnegie/vizlab-data-transfer"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"